--- a/frountend/college-portal-frontend/package.json
+++ b/frountend/college-portal-frontend/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.11.0",
     "clsx": "^2.1.1",
     "express": "^5.1.0",
+    "lucide-react": "^0.545.0",
     "ra-data-simple-rest": "^5.11.1",
     "react": "^19.1.1",
     "react-admin": "^5.11.1",
@@ -24,6 +25,7 @@
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "^5.0.1",
     "react-toastify": "^11.0.5",
+    "recharts": "^3.2.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,5 +51,10 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.17"
   }
 }
