Add API files with .js extensions for Vercel3

--- a/frountend/college-portal-frontend/jsconfig.json
+++ b/frountend/college-portal-frontend/jsconfig.json
@@ -1,6 +1,9 @@
 {
   "compilerOptions": {
     "baseUrl": "src",
+    "paths": {
+      "api/*": ["api/*"]
+    },
     "module": "esnext",
     "target": "esnext",
     "jsx": "react-jsx",
