--- a/frountend/college-portal-frontend/vercel.json
+++ b/frountend/college-portal-frontend/vercel.json
@@ -4,6 +4,7 @@
   "devCommand": "npm start",
   "installCommand": "npm install",
   "framework": "create-react-app",
+  "rootDirectory": ".",
   "rewrites": [
     {
       "source": "/(.*)",
@@ -11,4 +12,3 @@
     }
   ]
 }
-
